--- a/php-todo-list-json/src/styles/general.scss
+++ b/php-todo-list-json/src/styles/general.scss
@@ -57,7 +57,12 @@
   img{
     width: 100%;
   }
-  
+  ul{
+    padding: 0;
+  }
+  li{
+    padding: 0;
+  }
   ul li{
     list-style: none;
   }
